--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -7,8 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Website created for Little Lemon"
     />
+    <meta property="og:title" content="Little Lemon Restaurant">
+    <meta property="og:description" content="Little Lemon is a friendly restaurant that serves a vast array of delicacies for every taste bud">
+    <meta property="og:image" content="./images/logo1.jpg">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
